@@ -369,8 +369,8 @@ if (defined($ARGV[0])) {
             &rc_set_if_not_set("mt_enter_prompt", "true");
             &rc_set_if_not_set("render_prompt", "true");
             &rc_set_if_not_set("mt_exit_render", "true");
-            &rc_set_if_not_set("mt_def_width", 640);
-            &rc_set_if_not_set("mt_def_height", 480);
+            &rc_set_if_not_set("mt_def_width", 1024);
+            &rc_set_if_not_set("mt_def_height", 768);
             &rc_set_if_not_set("mt_def_achans", 2);
             &rc_set_if_not_set("mt_def_signed_endian", 2 * !&get_endian);
             &rc_set_if_not_set("mt_backaudio", "1");
